Updates js file. Updates gulp files. Updates index file.

--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -30,8 +30,8 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
-        <li><a href="#">Link</a></li>
+        <li class="active"><a href="#">Home <span class="sr-only">(current)</span></a></li>
+        <li><a id="jQueryTestButton" href="#">Test jQuery</a></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
           <ul class="dropdown-menu">
@@ -71,13 +71,30 @@
   <div class="container footer">
     <hr />
     <div class="text-center">
-      &copy; 2016. Ken Block.
+      &copy; 2016 - Ken Block.
     </div>
   </div>
+  <div class="modal fade" tabindex="-1" role="dialog">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title">Modal title</h4>
+      </div>
+      <div class="modal-body">
+        <p>One fine body&hellip;</p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        <!-- <button type="button" class="btn btn-primary">Save changes</button> -->
+      </div>
+    </div><!-- /.modal-content -->
+  </div><!-- /.modal-dialog -->
+</div><!-- /.modal -->
   <script src="lib/jquery/jquery.min.js"></script>
   <script src="lib/bootstrap/scripts/bootstrap.min.js"></script>
   <!-- inject:js -->
-  <script src="js/site-32df29ed3a.min.js"></script>
+  <script src="js/site-552b95d575.min.js"></script>
   <!-- endinject -->
 </body>
 </html>
