Updates modernizr inject section

--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -2,14 +2,16 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>My Title</title>
+  <title>Application Title</title>
   <link href="css/bootstrap.css" type="text/css" rel="stylesheet" />
   <link href="lib/font-awesome/css/font-awesome.min.css" type="text/css" rel="stylesheet" />
   <!-- inject:css -->
   <link rel="stylesheet" href="css/bootstrap-5fc2497eb4.min.css">
   <link rel="stylesheet" href="css/site-143ec1748b.min.css">
   <!-- endinject -->
-  <!-- inject:modernizer -->
+  <!-- modernizr must be loaded in the head before the page is rendered -->
+  <!-- modernizer:js -->
+  <script src="/wwwroot/js/modernizr-2.6.2.js"></script>
   <!-- endinject -->
 
 </head>
