--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -10,9 +10,7 @@
   <link rel="stylesheet" href="css/site-143ec1748b.min.css">
   <!-- endinject -->
   <!-- modernizr must be loaded in the head before the page is rendered -->
-  <!-- modernizer:js -->
-  <script src="/wwwroot/js/modernizr-2.6.2.js"></script>
-  <!-- endinject -->
+  <script src="js/modernizr-2.6.2.js"></script>
 
 </head>
 <body>
@@ -34,7 +32,7 @@
       <ul class="nav navbar-nav">
         <li class="active"><a href="#">Home <span class="sr-only">(current)</span></a></li>
         <li><a id="jQueryTestButton" href="#">Test jQuery</a></li>
-        <li class="dropdown">
+        <li class="dropdown hide">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><a href="#">Action</a></li>
@@ -47,14 +45,13 @@
           </ul>
         </li>
       </ul>
-      <form class="navbar-form navbar-left">
+      <form class="navbar-form navbar-left hide">
         <div class="form-group">
           <input type="text" class="form-control" placeholder="Search">
         </div>
         <button type="submit" class="btn btn-default">Submit</button>
       </form>
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">Link</a></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><i class="fa fa-user"></i>  Welcome, User! <span class="caret"></span></a>
           <ul class="dropdown-menu">
@@ -96,7 +93,7 @@
   <script src="lib/jquery/jquery.min.js"></script>
   <script src="lib/bootstrap/scripts/bootstrap.min.js"></script>
   <!-- inject:js -->
-  <script src="js/site-552b95d575.min.js"></script>
+  <script src="js/site-183cfca6fa.min.js"></script>
   <!-- endinject -->
 </body>
 </html>
